added file storage

--- a/respiration-sensor/experiments-streaming.ipynb
+++ b/respiration-sensor/experiments-streaming.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,12 +23,13 @@
     "# third-party\n",
     "import bitalino\n",
     "import serial\n",
-    "import scientisst"
+    "import scientisst\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +39,11 @@
     "batch_size = 100\n",
     "sampling_rate = 10\n",
     "\n",
-    "arduino_pattern = re.compile(r'\\d+,\\d\\n') # pattern to make sure the message received from the serial port is in the format \"{value}\\n\"\n",
+    "arduino_pattern = re.compile(r'\\d+\\n') # pattern to make sure the message received from the serial port is in the format \"{value}\\n\"\n",
     "\n",
     "bitalino_args = {\"mac_address\": \"/dev/tty.BITalino-6E-27\", \"sampling_rate\": sampling_rate, \"channels\": [0, 1, 2, 3, 4, 5], \"batch_size\": batch_size}\n",
     "scientisst_args = {\"mac_address\": \"/dev/cu.ScientISST-54-96\", \"sampling_rate\": sampling_rate, \"channels\": [1, 2, 3, 4, 5, 6], \"batch_size\": batch_size}\n",
-    "arduino_args = {\"port\": \"/dev/cu.usbmodem12201\", \"sampling_rate\": sampling_rate, \"batch_size\": batch_size}"
+    "arduino_args = {\"port\": \"/dev/cu.usbmodem12401\", \"sampling_rate\": sampling_rate, \"batch_size\": batch_size}"
    ]
   },
   {
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -65,18 +66,17 @@
       "Chosen port is not available. Choose one of the following ports:\n",
       "    * cu.wlan-debug\n",
       "    * cu.Bluetooth-Incoming-Port\n",
-      "    * cu.ScientISST-1D-4A\n",
-      "    * cu.ScientISST-54-96\n",
-      "    * cu.usbmodem12201\n"
+      "    * cu.usbmodem12401\n",
+      "    * cu.ScientISST-54-96\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<__main__.SerialPortUnavailable at 0x10c70a220>"
+       "<__main__.SerialPortUnavailable at 0x10913d550>"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
     "\n",
     "class Acquisition:\n",
     "\n",
-    "    def __init__(self, start_time):\n",
+    "    def __init__(self, start_time, file):\n",
     "        \n",
     "        self.sampling_rate = sampling_rate\n",
     "        self.keep_alive = True\n",
@@ -114,7 +114,29 @@
     "        self.bitalino_args = bitalino_args\n",
     "        self.scientisst_args = scientisst_args\n",
     "        self.arduino_args = arduino_args\n",
-    "        self.start_time = start_time\n"
+    "        self.start_time = start_time\n",
+    "        self.file = file\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define function that creates file header \n",
+    "\n",
+    "def get_header(acquisition):\n",
+    "\n",
+    "    scientisst_channels = \"\"\n",
+    "    for channel in acquisition.scientisst_args[\"channels\"]:\n",
+    "        scientisst_channels += f\"\\tscientisst_raw_AI{channel}\"\n",
+    "    \n",
+    "    bitalino_channels = \"\"\n",
+    "    for channel in acquisition.bitalino_args[\"channels\"]:\n",
+    "        bitalino_channels += f\"\\tbitalino_raw_A{channel}\"\n",
+    "\n",
+    "    return f\"#scientisst_nseq{scientisst_channels}bitalino_nseq{bitalino_channels}\\tarduino_raw\""
    ]
   },
   {
@@ -127,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,6 +167,7 @@
     "        try:\n",
     "            device = bitalino.BITalino(mac_address)\n",
     "            if device.macAddress:\n",
+    "                print(\"Connected!\")\n",
     "                break\n",
     "\n",
     "        except Exception as e:\n",
@@ -156,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,35 +258,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "def read_batch(bitalino_device, scientisst_device, arduino_device, acquisition):\n",
     "    \n",
-    "    #bitalino_data = bitalino_device.read(acquisition.bitalino_args[\"batch_size\"])\n",
-    "    scientisst_data = scientisst_device.read(matrix=True)\n",
-    "\n",
-    "    arduino_data = []\n",
-    "    arduino_message = \"\"\n",
-    "\n",
-    "    arduino_bytes = arduino_device.readline()\n",
-    "    if arduino_bytes != b\"\":\n",
-    "        arduino_data = arduino_bytes.decode()\n",
-    "\n",
-    "\n",
-    "    while len(arduino_data) < scientisst_data.shape[0]:\n",
-    "        arduino_bytes = arduino_device.readline() # read message from arduino and decode it from bytes to string\n",
+    "    try: \n",
     "        \n",
-    "        if arduino_bytes != arduino_message:\n",
-    "            arduino_message = arduino_message + arduino_bytes.decode() # in case the full line comes in different messages, concatenate it\n",
-    "            match = arduino_pattern.search(arduino_message) # make sure the message received from the serial port is in the format \"{value}\\n\"\n",
+    "        scientisst_data = scientisst_device.read(matrix=True)\n",
+    "        scientisst_data = np.take(scientisst_data,[0]+[*range(-2, -len(acquisition.scientisst_args[\"channels\"])*2-2, -2)], axis=1)\n",
+    "        #bitalino_data = bitalino_device.read(scientisst_data.shape[0])\n",
+    "        #bitalino_data = np.take(bitalino_data,[0]+[*range(-1, -len(acquisition.bitalino_args[\"channels\"])-1, -1)], axis=1)\n",
     "\n",
-    "        if match is not None: \n",
-    "            arduino_data += [match.group().strip()]\n",
+    "        arduino_data = []\n",
+    "        arduino_message = \"\"\n",
+    "        match = None\n",
     "\n",
-    "    print(f\"scientisst data:\\n{scientisst_data}\")\n",
-    "    print(f\"\\n\\narduino data:\\n{arduino_data}\")\n"
+    "        while len(arduino_data) < scientisst_data.shape[0]:\n",
+    "            arduino_bytes = arduino_device.readline().decode() # read message from arduino \n",
+    "\n",
+    "            if arduino_bytes != arduino_message:\n",
+    "                arduino_message = arduino_message + arduino_bytes # in case the full line comes in different messages, concatenate it\n",
+    "                match = arduino_pattern.search(arduino_message) # make sure the message received from the serial port is in the format \"{value}\\n\"\n",
+    "\n",
+    "            if match is not None: \n",
+    "                arduino_data += [[int(match.group().strip())]]\n",
+    "                arduino_message = \"\"\n",
+    "                \n",
+    "        #print(f\"bitalino data:\\n{bitalino_data}\")\n",
+    "        #print(f\"\\n\\nscientisst data:\\n{scientisst_data}\")\n",
+    "        #print(f\"\\n\\narduino data:\\n{np.array(arduino_data)}\")\n",
+    "    \n",
+    "        data = np.hstack((scientisst_data, np.array(arduino_data)))\n",
+    "        print(data)\n",
+    "\n",
+    "        np.savetxt(acquisition.file, data, fmt='\\t'.join(['%d']*data.shape[1]))\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(e)\n"
    ]
   },
   {
@@ -276,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -289,56 +322,146 @@
       "ScientISST Board Vref: 1114\n",
       "ScientISST Board ADC Attenuation Mode: 0\n",
       "Connected!\n",
-      "Searching for Arduino... /dev/cu.usbmodem12201\n",
+      "Searching for Arduino... /dev/cu.usbmodem12401\n",
       "Connected!\n",
-      "2\n",
-      "scientisst data:\n",
-      "[[  0   0   0   0   0   0 254   0 254   0 254   0 254   0 254   0 254]\n",
-      " [  1   0   0   0   0   0 254   0 254   0 254   0 254   0 254   0 254]]\n",
+      "[[0 0 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0 0]]\n",
+      "[[2 0 0 0 0 0 0 0]\n",
+      " [3 0 0 0 0 0 0 0]]\n",
+      "[[4 0 0 0 0 0 0 0]\n",
+      " [5 0 0 0 0 0 0 0]]\n",
+      "[[6 0 0 0 0 0 0 0]\n",
+      " [7 0 0 0 0 0 0 0]]\n",
+      "[[8 0 0 0 0 0 0 0]\n",
+      " [9 0 0 0 0 0 0 0]]\n",
+      "[[10  0  0  0  0  0  0  0]\n",
+      " [11  0  0  0  0  0  0  0]]\n",
+      "[[12  0  0  0  0  0  0  0]\n",
+      " [13  0  0  0  0  0  0  0]]\n",
+      "[[14  0  0  0  0  0  0  0]\n",
+      " [15  0  0  0  0  0  0  0]]\n",
+      "[[0 0 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0 0]]\n",
+      "[[2 0 0 0 0 0 0 0]\n",
+      " [3 0 0 0 0 0 0 0]]\n",
+      "[[4 0 0 0 0 0 0 0]\n",
+      " [5 0 0 0 0 0 0 0]]\n",
+      "[[6 0 0 0 0 0 0 0]\n",
+      " [7 0 0 0 0 0 0 0]]\n",
+      "[[8 0 0 0 0 0 0 0]\n",
+      " [9 0 0 0 0 0 0 0]]\n",
+      "[[10  0  0  0  0  0  0  0]\n",
+      " [11  0  0  0  0  0  0  0]]\n",
+      "[[12  0  0  0  0  0  0  0]\n",
+      " [13  0  0  0  0  0  0  0]]\n",
+      "[[14  0  0  0  0  0  0  0]\n",
+      " [15  0  0  0  0  0  0  0]]\n",
+      "[[0 0 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0 0]]\n",
+      "[[2 0 0 0 0 0 0 0]\n",
+      " [3 0 0 0 0 0 0 0]]\n",
+      "[[4 0 0 0 0 0 0 0]\n",
+      " [5 0 0 0 0 0 0 0]]\n",
+      "[[6 0 0 0 0 0 0 0]\n",
+      " [7 0 0 0 0 0 0 0]]\n",
+      "[[8 0 0 0 0 0 0 0]\n",
+      " [9 0 0 0 0 0 0 1]]\n",
+      "[[10  0  0  0  0  0  0  0]\n",
+      " [11  0  0  0  0  0  0  0]]\n",
+      "[[12  0  0  0  0  0  0  0]\n",
+      " [13  0  0  0  0  0  0  0]]\n",
+      "[[14  0  0  0  0  0  0  0]\n",
+      " [15  0  0  0  0  0  0  0]]\n",
+      "[[0 0 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0 0]]\n",
+      "[[2 0 0 0 0 0 0 1]\n",
+      " [3 0 0 0 0 0 0 0]]\n",
+      "[[4 0 0 0 0 0 0 0]\n",
+      " [5 0 0 0 0 0 0 0]]\n",
+      "[[6 0 0 0 0 0 0 0]\n",
+      " [7 0 0 0 0 0 0 0]]\n",
+      "[[8 0 0 0 0 0 0 0]\n",
+      " [9 0 0 0 0 0 0 0]]\n",
+      "[[10  0  0  0  0  0  0  0]\n",
+      " [11  0  0  0  0  0  0  0]]\n",
+      "[[12  0  0  0  0  0  0  1]\n",
+      " [13  0  0  0  0  0  0  0]]\n",
+      "[[14  0  0  0  0  0  0  0]\n",
+      " [15  0  0  0  0  0  0  0]]\n",
+      "[[0 0 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0 0]]\n",
+      "[[2 0 0 0 0 0 0 0]\n",
+      " [3 0 0 0 0 0 0 0]]\n",
+      "[[4 0 0 0 0 0 0 0]\n",
+      " [5 0 0 0 0 0 0 0]]\n",
+      "[[6 0 0 0 0 0 0 0]\n",
+      " [7 0 0 0 0 0 0 0]]\n",
+      "[[8 0 0 0 0 0 0 1]\n",
+      " [9 0 0 0 0 0 0 0]]\n",
+      "[[10  0  0  0  0  0  0  0]\n",
+      " [11  0  0  0  0  0  0  0]]\n",
+      "[[12  0  0  0  0  0  0  0]\n",
+      " [13  0  0  0  0  0  0  0]]\n",
+      "[[14  0  0  0  0  0  0  0]\n",
+      " [15  0  0  0  0  0  0  0]]\n",
+      "[[0 0 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0 0]]\n",
+      "[[2 0 0 0 0 0 0 0]\n",
+      " [3 0 0 0 0 0 0 0]]\n",
+      "[[4 0 0 0 0 0 0 1]\n",
+      " [5 0 0 0 0 0 0 0]]\n",
+      "[[6 0 0 0 0 0 0 0]\n",
+      " [7 0 0 0 0 0 0 0]]\n",
+      "[[8 0 0 0 0 0 0 0]\n",
+      " [9 0 0 0 0 0 0 0]]\n",
+      "[[10  0  0  0  0  0  0  0]\n",
+      " [11  0  0  0  0  0  0  0]]\n",
+      "[[12  0  0  0  0  0  0  1]\n",
+      " [13  0  0  0  0  0  0  1]]\n",
+      "[[14  0  0  0  0  0  0  0]\n",
+      " [15  0  0  0  0  0  0  0]]\n",
+      "[[0 0 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0 0]]\n",
+      "[[2 0 0 0 0 0 0 0]\n",
+      " [3 0 0 0 0 0 0 0]]\n",
+      "[[4 0 0 0 0 0 0 0]\n",
+      " [5 0 0 0 0 0 0 1]]\n",
+      "[[6 0 0 0 0 0 0 0]\n",
+      " [7 0 0 0 0 0 0 0]]\n",
+      "[[8 0 0 0 0 0 0 0]\n",
+      " [9 0 0 0 0 0 0 0]]\n",
+      "[[10  0  0  0  0  0  0  0]\n",
+      " [11  0  0  0  0  0  0  0]]\n",
+      "[[12  0  0  0  0  0  0  0]\n",
+      " [13  0  0  0  0  0  0  1]]\n",
+      "[[14  0  0  0  0  0  0  0]\n",
+      " [15  0  0  0  0  0  0  0]]\n",
+      "[[0 0 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0 0]]\n",
+      "[[2 0 0 0 0 0 0 0]\n",
+      " [3 0 0 0 0 0 0 0]]\n",
+      "[[4 0 0 0 0 0 0 0]\n",
+      " [5 0 0 0 0 0 0 1]]\n",
+      "[[6 0 0 0 0 0 0 0]\n",
+      " [7 0 0 0 0 0 0 0]]\n",
+      "[[8 0 0 0 0 0 0 0]\n",
+      " [9 0 0 0 0 0 0 0]]\n",
+      "[[10  0  0  0  0  0  0  0]\n",
+      " [11  0  0  0  0  0  0  1]]\n",
+      "[[12  0  0  0  0  0  0  0]\n",
+      " [13  0  0  0  0  0  0  0]]\n",
+      "[[14  0  0  0  0  0  0  0]\n",
+      " [15  0  0  0  0  0  0  0]]\n",
+      "[[0 0 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0 0]]\n",
+      "[[2 0 0 0 0 0 0 0]\n",
+      " [3 0 0 0 0 0 0 0]]\n",
+      "[[4 0 0 0 0 0 0 0]\n",
+      " [5 0 0 0 0 0 0 0]]\n",
+      "[[6 0 0 0 0 0 0 0]\n",
+      " [7 0 0 0 0 0 0 0]]\n",
       "\n",
       "\n",
-      "arduino data:\n",
-      "[]\n",
-      "2\n",
-      "scientisst data:\n",
-      "[[  2   0   0   0   0   0 254   0 254   0 254   0 254   0 254   0 254]\n",
-      " [  3   0   0   0   0   0 254   0 254   0 254   0 254   0 254   0 254]]\n",
-      "\n",
-      "\n",
-      "arduino data:\n",
-      "[]\n",
-      "2\n",
-      "scientisst data:\n",
-      "[[  4   0   0   0   0   0 254   0 254   0 254   0 254   0 254   0 254]\n",
-      " [  5   0   0   0   0   0 254   0 254   0 254   0 254   0 254   0 254]]\n",
-      "\n",
-      "\n",
-      "arduino data:\n",
-      "[]\n",
-      "2\n",
-      "scientisst data:\n",
-      "[[  6   0   0   0   0   0 254   0 254   0 254   0 254   0 254   0 254]\n",
-      " [  7   0   0   0   0   0 254   0 254   0 254   0 254   0 254   0 254]]\n",
-      "\n",
-      "\n",
-      "arduino data:\n",
-      "[]\n",
-      "2\n",
-      "scientisst data:\n",
-      "[[  8   0   0   0   0   0 254   0 254   0 254   0 254   0 254   0 254]\n",
-      " [  9   0   0   0   0   0 254   0 254   0 254   0 254   0 254   0 254]]\n",
-      "\n",
-      "\n",
-      "arduino data:\n",
-      "[]\n",
-      "2\n",
-      "scientisst data:\n",
-      "[[ 10   0   0   0   0   0 254   0 254   0 254   0 254   0 254   0 254]\n",
-      " [ 11   0   0   0   0   0 254   0 254   0 254   0 254   0 254   0 254]]\n",
-      "\n",
-      "\n",
-      "arduino data:\n",
-      "[]\n",
       "Acquisition terminated\n"
      ]
     }
@@ -347,14 +470,16 @@
     "try: \n",
     "    \n",
     "    now = datetime.now()\n",
-    "    file = open(f\"/Users/anasofiacc/Library/CloudStorage/OneDrive-UniversidadedeLisboa/PhD/Clynx project/Respiration sensor/magnetometer/code/sample_{now.strftime('%d-%m-%Y_%H-%M-%S')}.txt\",\"w\")\n",
+    "    file = open(f\"/Users/anasofiacc/Library/CloudStorage/OneDrive-UniversidadedeLisboa/PhD/Clynx project/Respiration sensor/magnetometer/data/sample_{now.strftime('%d-%m-%Y_%H-%M-%S')}.txt\",\"w\")\n",
     "    acquisition = Acquisition(time.time(), file)\n",
     "\n",
+    "    file.write(get_header(acquisition))\n",
+    "\n",
     "    # Connect devices\n",
+    "\n",
     "    scientisst_device = connect_scientisst(scientisst_args[\"mac_address\"])\n",
-    "    #bitalino_device = connect_bitalino(bitalino_args[\"mac_address\"])\n",
-    "    bitalino_device = None\n",
-    "    arduino_device = None\n",
+    "    bitalino_device = None #bitalino_device = connect_bitalino(bitalino_args[\"mac_address\"])\n",
+    "    arduino_device = None # This device does not require connection prior to acquisition start\n",
     "\n",
     "except KeyboardInterrupt:\n",
     "    print(f\"Script terminated before acquisition was started\")\n",
@@ -381,7 +506,8 @@
     "    #bitalino_device.stop()\n",
     "    scientisst_device.stop()\n",
     "    arduino_device.close()\n",
-    "    print(f\"Acquisition terminated\")\n"
+    "    file.close()\n",
+    "    print(f\"\\n\\nAcquisition terminated\")\n"
    ]
   },
   {
