Correct scientisst port

--- a/respiration-sensor/experiments-streaming.ipynb
+++ b/respiration-sensor/experiments-streaming.ipynb
@@ -3,15 +3,23 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Initialization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# built-in\n",
@@ -29,8 +37,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Initiate variables\n",
@@ -41,42 +53,49 @@
     "\n",
     "arduino_pattern = re.compile(r'\\d+\\n') # pattern to make sure the message received from the serial port is in the format \"{value}\\n\"\n",
     "\n",
-    "bitalino_args = {\"mac_address\": \"/dev/tty.BITalino-6E-27\", \"sampling_rate\": sampling_rate, \"channels\": [0, 1, 2, 3, 4, 5], \"batch_size\": batch_size}\n",
-    "scientisst_args = {\"mac_address\": \"/dev/cu.ScientISST-54-96\", \"sampling_rate\": sampling_rate, \"channels\": [1, 2, 3, 4, 5, 6], \"batch_size\": batch_size}\n",
-    "arduino_args = {\"port\": \"/dev/cu.usbmodem12401\", \"sampling_rate\": sampling_rate, \"batch_size\": batch_size}"
+    "bitalino_args = {\"mac_address\": \"98:D3:61:FD:6E:27\", \"sampling_rate\": sampling_rate, \"channels\": [0, 1, 2, 3, 4, 5], \"batch_size\": batch_size}\n",
+    "scientisst_args = {\"mac_address\": \"COM3\", \"sampling_rate\": sampling_rate, \"channels\": [1, 2, 3, 4, 5, 6], \"batch_size\": batch_size}\n",
+    "arduino_args = {\"port\": \"COM7\", \"sampling_rate\": sampling_rate, \"batch_size\": batch_size}"
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Define auxiliary functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Chosen port is not available. Choose one of the following ports:\n",
-      "    * cu.wlan-debug\n",
-      "    * cu.Bluetooth-Incoming-Port\n",
-      "    * cu.usbmodem12401\n",
-      "    * cu.ScientISST-54-96\n"
+      "    * COM4\n",
+      "    * COM3\n",
+      "    * COM5\n",
+      "    * COM6\n",
+      "    * COM7\n"
      ]
     },
     {
      "data": {
-      "text/plain": [
-       "<__main__.SerialPortUnavailable at 0x10913d550>"
-      ]
+      "text/plain": "<__main__.SerialPortUnavailable at 0x1c8fd16fa00>"
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,8 +117,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Define class that hold all setup informations about the acquisition\n",
@@ -120,8 +143,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Define function that creates file header \n",
@@ -142,15 +169,23 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Define functions for device connection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def connect_bitalino(mac_address):\n",
@@ -179,11 +214,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
-    "def connect_scientisst(mac_address):\n",
+    "def connect_scientisst1(mac_address):\n",
     "    init_connect_time = time.time()\n",
     "    print(f'Searching for ScientISST... {mac_address}')\n",
     "\n",
@@ -207,8 +246,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "def connect_scientisst(mac_address):\n",
+    "    print(\"here\")\n",
+    "    pass\n",
+    "    device = scientisst.ScientISST(mac_address)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def connect_arduino(port):\n",
@@ -236,20 +296,28 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Define functions to start and read devices"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def start_devices(bitalino_device, scientisst_device, acquisition):\n",
     "\n",
-    "    #bitalino_device.start(SamplingRate=acquisition.bitalino_args[\"sampling_rate\"], analogChannels=acquisition.bitalino_args[\"channels\"])\n",
+    "    bitalino_device.start(SamplingRate=acquisition.bitalino_args[\"sampling_rate\"], analogChannels=acquisition.bitalino_args[\"channels\"])\n",
     "    scientisst_device.start(sample_rate=acquisition.scientisst_args[\"sampling_rate\"], channels=acquisition.scientisst_args[\"channels\"])  \n",
     "    arduino_device = connect_arduino(arduino_args[\"port\"])\n",
     "    \n",
@@ -258,8 +326,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def read_batch(bitalino_device, scientisst_device, arduino_device, acquisition):\n",
@@ -268,8 +340,8 @@
     "        \n",
     "        scientisst_data = scientisst_device.read(matrix=True)\n",
     "        scientisst_data = np.take(scientisst_data,[0]+[*range(-2, -len(acquisition.scientisst_args[\"channels\"])*2-2, -2)], axis=1)\n",
-    "        #bitalino_data = bitalino_device.read(scientisst_data.shape[0])\n",
-    "        #bitalino_data = np.take(bitalino_data,[0]+[*range(-1, -len(acquisition.bitalino_args[\"channels\"])-1, -1)], axis=1)\n",
+    "        bitalino_data = bitalino_device.read(scientisst_data.shape[0])\n",
+    "        bitalino_data = np.take(bitalino_data,[0]+[*range(-1, -len(acquisition.bitalino_args[\"channels\"])-1, -1)], axis=1)\n",
     "\n",
     "        arduino_data = []\n",
     "        arduino_message = \"\"\n",
@@ -302,167 +374,30 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Main script"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Searching for ScientISST... /dev/cu.ScientISST-54-96\n",
-      "Connecting to /dev/cu.ScientISST-54-96...\n",
-      "ScientISST version: 1.0\n",
-      "ScientISST Board Vref: 1114\n",
-      "ScientISST Board ADC Attenuation Mode: 0\n",
-      "Connected!\n",
-      "Searching for Arduino... /dev/cu.usbmodem12401\n",
-      "Connected!\n",
-      "[[0 0 0 0 0 0 0 0]\n",
-      " [1 0 0 0 0 0 0 0]]\n",
-      "[[2 0 0 0 0 0 0 0]\n",
-      " [3 0 0 0 0 0 0 0]]\n",
-      "[[4 0 0 0 0 0 0 0]\n",
-      " [5 0 0 0 0 0 0 0]]\n",
-      "[[6 0 0 0 0 0 0 0]\n",
-      " [7 0 0 0 0 0 0 0]]\n",
-      "[[8 0 0 0 0 0 0 0]\n",
-      " [9 0 0 0 0 0 0 0]]\n",
-      "[[10  0  0  0  0  0  0  0]\n",
-      " [11  0  0  0  0  0  0  0]]\n",
-      "[[12  0  0  0  0  0  0  0]\n",
-      " [13  0  0  0  0  0  0  0]]\n",
-      "[[14  0  0  0  0  0  0  0]\n",
-      " [15  0  0  0  0  0  0  0]]\n",
-      "[[0 0 0 0 0 0 0 0]\n",
-      " [1 0 0 0 0 0 0 0]]\n",
-      "[[2 0 0 0 0 0 0 0]\n",
-      " [3 0 0 0 0 0 0 0]]\n",
-      "[[4 0 0 0 0 0 0 0]\n",
-      " [5 0 0 0 0 0 0 0]]\n",
-      "[[6 0 0 0 0 0 0 0]\n",
-      " [7 0 0 0 0 0 0 0]]\n",
-      "[[8 0 0 0 0 0 0 0]\n",
-      " [9 0 0 0 0 0 0 0]]\n",
-      "[[10  0  0  0  0  0  0  0]\n",
-      " [11  0  0  0  0  0  0  0]]\n",
-      "[[12  0  0  0  0  0  0  0]\n",
-      " [13  0  0  0  0  0  0  0]]\n",
-      "[[14  0  0  0  0  0  0  0]\n",
-      " [15  0  0  0  0  0  0  0]]\n",
-      "[[0 0 0 0 0 0 0 0]\n",
-      " [1 0 0 0 0 0 0 0]]\n",
-      "[[2 0 0 0 0 0 0 0]\n",
-      " [3 0 0 0 0 0 0 0]]\n",
-      "[[4 0 0 0 0 0 0 0]\n",
-      " [5 0 0 0 0 0 0 0]]\n",
-      "[[6 0 0 0 0 0 0 0]\n",
-      " [7 0 0 0 0 0 0 0]]\n",
-      "[[8 0 0 0 0 0 0 0]\n",
-      " [9 0 0 0 0 0 0 1]]\n",
-      "[[10  0  0  0  0  0  0  0]\n",
-      " [11  0  0  0  0  0  0  0]]\n",
-      "[[12  0  0  0  0  0  0  0]\n",
-      " [13  0  0  0  0  0  0  0]]\n",
-      "[[14  0  0  0  0  0  0  0]\n",
-      " [15  0  0  0  0  0  0  0]]\n",
-      "[[0 0 0 0 0 0 0 0]\n",
-      " [1 0 0 0 0 0 0 0]]\n",
-      "[[2 0 0 0 0 0 0 1]\n",
-      " [3 0 0 0 0 0 0 0]]\n",
-      "[[4 0 0 0 0 0 0 0]\n",
-      " [5 0 0 0 0 0 0 0]]\n",
-      "[[6 0 0 0 0 0 0 0]\n",
-      " [7 0 0 0 0 0 0 0]]\n",
-      "[[8 0 0 0 0 0 0 0]\n",
-      " [9 0 0 0 0 0 0 0]]\n",
-      "[[10  0  0  0  0  0  0  0]\n",
-      " [11  0  0  0  0  0  0  0]]\n",
-      "[[12  0  0  0  0  0  0  1]\n",
-      " [13  0  0  0  0  0  0  0]]\n",
-      "[[14  0  0  0  0  0  0  0]\n",
-      " [15  0  0  0  0  0  0  0]]\n",
-      "[[0 0 0 0 0 0 0 0]\n",
-      " [1 0 0 0 0 0 0 0]]\n",
-      "[[2 0 0 0 0 0 0 0]\n",
-      " [3 0 0 0 0 0 0 0]]\n",
-      "[[4 0 0 0 0 0 0 0]\n",
-      " [5 0 0 0 0 0 0 0]]\n",
-      "[[6 0 0 0 0 0 0 0]\n",
-      " [7 0 0 0 0 0 0 0]]\n",
-      "[[8 0 0 0 0 0 0 1]\n",
-      " [9 0 0 0 0 0 0 0]]\n",
-      "[[10  0  0  0  0  0  0  0]\n",
-      " [11  0  0  0  0  0  0  0]]\n",
-      "[[12  0  0  0  0  0  0  0]\n",
-      " [13  0  0  0  0  0  0  0]]\n",
-      "[[14  0  0  0  0  0  0  0]\n",
-      " [15  0  0  0  0  0  0  0]]\n",
-      "[[0 0 0 0 0 0 0 0]\n",
-      " [1 0 0 0 0 0 0 0]]\n",
-      "[[2 0 0 0 0 0 0 0]\n",
-      " [3 0 0 0 0 0 0 0]]\n",
-      "[[4 0 0 0 0 0 0 1]\n",
-      " [5 0 0 0 0 0 0 0]]\n",
-      "[[6 0 0 0 0 0 0 0]\n",
-      " [7 0 0 0 0 0 0 0]]\n",
-      "[[8 0 0 0 0 0 0 0]\n",
-      " [9 0 0 0 0 0 0 0]]\n",
-      "[[10  0  0  0  0  0  0  0]\n",
-      " [11  0  0  0  0  0  0  0]]\n",
-      "[[12  0  0  0  0  0  0  1]\n",
-      " [13  0  0  0  0  0  0  1]]\n",
-      "[[14  0  0  0  0  0  0  0]\n",
-      " [15  0  0  0  0  0  0  0]]\n",
-      "[[0 0 0 0 0 0 0 0]\n",
-      " [1 0 0 0 0 0 0 0]]\n",
-      "[[2 0 0 0 0 0 0 0]\n",
-      " [3 0 0 0 0 0 0 0]]\n",
-      "[[4 0 0 0 0 0 0 0]\n",
-      " [5 0 0 0 0 0 0 1]]\n",
-      "[[6 0 0 0 0 0 0 0]\n",
-      " [7 0 0 0 0 0 0 0]]\n",
-      "[[8 0 0 0 0 0 0 0]\n",
-      " [9 0 0 0 0 0 0 0]]\n",
-      "[[10  0  0  0  0  0  0  0]\n",
-      " [11  0  0  0  0  0  0  0]]\n",
-      "[[12  0  0  0  0  0  0  0]\n",
-      " [13  0  0  0  0  0  0  1]]\n",
-      "[[14  0  0  0  0  0  0  0]\n",
-      " [15  0  0  0  0  0  0  0]]\n",
-      "[[0 0 0 0 0 0 0 0]\n",
-      " [1 0 0 0 0 0 0 0]]\n",
-      "[[2 0 0 0 0 0 0 0]\n",
-      " [3 0 0 0 0 0 0 0]]\n",
-      "[[4 0 0 0 0 0 0 0]\n",
-      " [5 0 0 0 0 0 0 1]]\n",
-      "[[6 0 0 0 0 0 0 0]\n",
-      " [7 0 0 0 0 0 0 0]]\n",
-      "[[8 0 0 0 0 0 0 0]\n",
-      " [9 0 0 0 0 0 0 0]]\n",
-      "[[10  0  0  0  0  0  0  0]\n",
-      " [11  0  0  0  0  0  0  1]]\n",
-      "[[12  0  0  0  0  0  0  0]\n",
-      " [13  0  0  0  0  0  0  0]]\n",
-      "[[14  0  0  0  0  0  0  0]\n",
-      " [15  0  0  0  0  0  0  0]]\n",
-      "[[0 0 0 0 0 0 0 0]\n",
-      " [1 0 0 0 0 0 0 0]]\n",
-      "[[2 0 0 0 0 0 0 0]\n",
-      " [3 0 0 0 0 0 0 0]]\n",
-      "[[4 0 0 0 0 0 0 0]\n",
-      " [5 0 0 0 0 0 0 0]]\n",
-      "[[6 0 0 0 0 0 0 0]\n",
-      " [7 0 0 0 0 0 0 0]]\n",
-      "\n",
-      "\n",
-      "Acquisition terminated\n"
+      "here\n",
+      "Connecting to COM6...\n"
      ]
     }
    ],
@@ -470,7 +405,7 @@
     "try: \n",
     "    \n",
     "    now = datetime.now()\n",
-    "    file = open(f\"/Users/anasofiacc/Library/CloudStorage/OneDrive-UniversidadedeLisboa/PhD/Clynx project/Respiration sensor/magnetometer/data/sample_{now.strftime('%d-%m-%Y_%H-%M-%S')}.txt\",\"w\")\n",
+    "    file = open(f\"D:\\\\Projects\\\\respiration-sensor\\\\respiration-sensor\\\\resources\\\\sample_{now.strftime('%d-%m-%Y_%H-%M-%S')}.txt\",\"w\")\n",
     "    acquisition = Acquisition(time.time(), file)\n",
     "\n",
     "    file.write(get_header(acquisition))\n",
@@ -478,16 +413,17 @@
     "    # Connect devices\n",
     "\n",
     "    scientisst_device = connect_scientisst(scientisst_args[\"mac_address\"])\n",
-    "    bitalino_device = None #bitalino_device = connect_bitalino(bitalino_args[\"mac_address\"])\n",
+    "    bitalino_device = connect_bitalino(bitalino_args[\"mac_address\"])\n",
     "    arduino_device = None # This device does not require connection prior to acquisition start\n",
     "\n",
-    "except KeyboardInterrupt:\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
     "    print(f\"Script terminated before acquisition was started\")\n",
     "    acquisition.keep_alive = False\n",
     "\n",
     "try: \n",
     "\n",
-    "    while acquisition.keep_alive == True:\n",
+    "    while acquisition.keep_alive:\n",
     "        \n",
     "        if not acquisition.devices_started: \n",
     "            # If the devices have not yet started acquiring or they are paused, start acquisition\n",
@@ -503,7 +439,7 @@
     "            read_batch(bitalino_device, scientisst_device, arduino_device, acquisition)\n",
     "\n",
     "except KeyboardInterrupt:\n",
-    "    #bitalino_device.stop()\n",
+    "    bitalino_device.stop()\n",
     "    scientisst_device.stop()\n",
     "    arduino_device.close()\n",
     "    file.close()\n",
@@ -512,17 +448,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "here\n",
+      "Connecting to COM3...\n",
+      "ScientISST version: 1.0\n",
+      "ScientISST Board Vref: 1114\n",
+      "ScientISST Board ADC Attenuation Mode: 0\n",
+      "Connected!\n"
+     ]
+    }
+   ],
+   "source": [
+    "scientisst_args = {\"mac_address\": \"COM3\", \"sampling_rate\": sampling_rate, \"channels\": [1, 2, 3, 4, 5, 6], \"batch_size\": batch_size}\n",
+    "\n",
+    "scientisst_device = connect_scientisst(scientisst_args[\"mac_address\"])\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "envepibox",
+   "name": "venv",
    "language": "python",
-   "name": "python3"
+   "display_name": "Python 3.8 Respiration Sensor"
   },
   "language_info": {
    "codemirror_mode": {
