--- a/respiration-sensor/experiments-streaming.ipynb
+++ b/respiration-sensor/experiments-streaming.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,9 +41,9 @@
     "\n",
     "arduino_pattern = re.compile(r'\\d+\\n') # pattern to make sure the message received from the serial port is in the format \"{value}\\n\"\n",
     "\n",
-    "bitalino_args = {\"mac_address\": \"/dev/tty.BITalino-6E-27\", \"sampling_rate\": sampling_rate, \"channels\": [0, 1, 2, 3, 4, 5], \"batch_size\": batch_size}\n",
-    "scientisst_args = {\"mac_address\": \"/dev/cu.ScientISST-54-96\", \"sampling_rate\": sampling_rate, \"channels\": [1, 2, 3, 4, 5, 6], \"batch_size\": batch_size}\n",
-    "arduino_args = {\"port\": \"/dev/cu.usbmodem12401\", \"sampling_rate\": sampling_rate, \"batch_size\": batch_size}"
+    "bitalino_args = {\"mac_address\": \"/dev/tty.BITalino-6E-27\", \"sampling_rate\": sampling_rate, \"channels\": [0], \"batch_size\": batch_size}\n",
+    "scientisst_args = {\"mac_address\": \"/dev/cu.ScientISST-54-96\", \"sampling_rate\": sampling_rate, \"channels\": [1], \"batch_size\": batch_size}\n",
+    "arduino_args = {\"port\": \"/dev/cu.usbmodem112401\", \"sampling_rate\": sampling_rate, \"batch_size\": batch_size}"
    ]
   },
   {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -66,17 +66,18 @@
       "Chosen port is not available. Choose one of the following ports:\n",
       "    * cu.wlan-debug\n",
       "    * cu.Bluetooth-Incoming-Port\n",
-      "    * cu.usbmodem12401\n",
+      "    * cu.ScientISST-32-22\n",
+      "    * cu.usbmodem112401\n",
       "    * cu.ScientISST-54-96\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<__main__.SerialPortUnavailable at 0x10913d550>"
+       "<__main__.SerialPortUnavailable at 0x103f8eeb0>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,12 +116,12 @@
     "        self.scientisst_args = scientisst_args\n",
     "        self.arduino_args = arduino_args\n",
     "        self.start_time = start_time\n",
-    "        self.file = file\n"
+    "        self.file = file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,6 +141,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define Exceptions\n",
+    "\n",
+    "class TimeoutException(Exception):\n",
+    "    \"   Connection attempt timed out\"\n",
+    "    pass\n",
+    "\n",
+    "class ConnectionFailedException(Exception):\n",
+    "    \"   Failed to connect to device\"\n",
+    "    pass\n",
+    "\n",
+    "class UnknownDeviceException(Exception):\n",
+    "    \"   Unknown device - please choose ScientISST, BITalino or Arduino\"\n",
+    "    pass"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -149,88 +171,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def connect_bitalino(mac_address):\n",
+    "def connect_device(address, device_type):\n",
     "\n",
+    "    device = None\n",
     "    init_connect_time = time.time()\n",
-    "    print(f'Searching for BITalino... {mac_address}')\n",
+    "    print(f'Searching for {device_type}... {address}')\n",
     "\n",
-    "    while True:\n",
-    "\n",
-    "        if (time.time() - init_connect_time) > timeout:\n",
-    "            print(f\"    Timeout for BITalino device connection\")\n",
-    "            raise Exception\n",
+    "    while (time.time() - init_connect_time) < timeout:\n",
     "\n",
     "        try:\n",
-    "            device = bitalino.BITalino(mac_address)\n",
-    "            if device.macAddress:\n",
+    "            if device_type == \"BITalino\":\n",
+    "                device = bitalino.BITalino(address)\n",
+    "                if device.macAddress:\n",
+    "                    print(\"Connected!\")\n",
+    "                    return device\n",
+    "            elif device_type == \"ScientISST\":\n",
+    "                device = scientisst.ScientISST(address)\n",
+    "                if device.address:\n",
+    "                    return device\n",
+    "            elif device_type == \"Arduino\":\n",
+    "                device = serial.Serial(address, baudrate=115200, timeout=0)\n",
     "                print(\"Connected!\")\n",
-    "                break\n",
+    "                return device\n",
+    "            else:\n",
+    "                time.sleep(0.1)\n",
+    "                raise UnknownDeviceException\n",
     "\n",
     "        except Exception as e:\n",
     "            print(e)\n",
     "            continue\n",
     "\n",
-    "    return device"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def connect_scientisst(mac_address):\n",
-    "    init_connect_time = time.time()\n",
-    "    print(f'Searching for ScientISST... {mac_address}')\n",
-    "\n",
-    "    while True:\n",
-    "\n",
-    "        if (time.time() - init_connect_time) > timeout:\n",
-    "            print(f\"    Timeout for ScientISST device connection\")\n",
-    "            raise Exception\n",
-    "\n",
-    "        try:\n",
-    "            device = scientisst.ScientISST(mac_address)\n",
-    "            if device.address:\n",
-    "                break\n",
-    "\n",
-    "        except Exception as e:\n",
-    "            print(e)\n",
-    "            continue\n",
-    "\n",
-    "    return device"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def connect_arduino(port):\n",
-    "    init_connect_time = time.time()\n",
-    "    print(f'Searching for Arduino... {port}')\n",
-    "\n",
-    "    while True:\n",
-    "\n",
-    "        if (time.time() - init_connect_time) > timeout:\n",
-    "            print(f\"    Timeout for Arduino device connection\")\n",
-    "            raise Exception\n",
-    "\n",
-    "        try:\n",
-    "            device = serial.Serial(port, baudrate=115200, timeout=0)\n",
-    "            print(\"Connected!\")\n",
-    "            break\n",
-    "\n",
-    "        except Exception as e:\n",
-    "            print(e)\n",
-    "            continue\n",
-    "\n",
-    "    return device    "
+    "    raise TimeoutException"
    ]
   },
   {
@@ -243,22 +218,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def start_devices(bitalino_device, scientisst_device, acquisition):\n",
     "\n",
-    "    #bitalino_device.start(SamplingRate=acquisition.bitalino_args[\"sampling_rate\"], analogChannels=acquisition.bitalino_args[\"channels\"])\n",
     "    scientisst_device.start(sample_rate=acquisition.scientisst_args[\"sampling_rate\"], channels=acquisition.scientisst_args[\"channels\"])  \n",
-    "    arduino_device = connect_arduino(arduino_args[\"port\"])\n",
+    "    #bitalino_device.start(SamplingRate=acquisition.bitalino_args[\"sampling_rate\"], analogChannels=acquisition.bitalino_args[\"channels\"])\n",
+    "    arduino_device = connect_device(arduino_args[\"port\"], \"Arduino\")\n",
     "    \n",
     "    return arduino_device"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,12 +266,12 @@
     "        #print(f\"\\n\\narduino data:\\n{np.array(arduino_data)}\")\n",
     "    \n",
     "        data = np.hstack((scientisst_data, np.array(arduino_data)))\n",
-    "        print(data)\n",
+    "        print(f\"\\ndata: {data}\")\n",
     "\n",
     "        np.savetxt(acquisition.file, data, fmt='\\t'.join(['%d']*data.shape[1]))\n",
     "        \n",
     "    except Exception as e:\n",
-    "        print(e)\n"
+    "        print(e)"
    ]
   },
   {
@@ -309,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -322,144 +297,68 @@
       "ScientISST Board Vref: 1114\n",
       "ScientISST Board ADC Attenuation Mode: 0\n",
       "Connected!\n",
-      "Searching for Arduino... /dev/cu.usbmodem12401\n",
+      "Searching for Arduino... /dev/cu.usbmodem112401\n",
       "Connected!\n",
-      "[[0 0 0 0 0 0 0 0]\n",
-      " [1 0 0 0 0 0 0 0]]\n",
-      "[[2 0 0 0 0 0 0 0]\n",
-      " [3 0 0 0 0 0 0 0]]\n",
-      "[[4 0 0 0 0 0 0 0]\n",
-      " [5 0 0 0 0 0 0 0]]\n",
-      "[[6 0 0 0 0 0 0 0]\n",
-      " [7 0 0 0 0 0 0 0]]\n",
-      "[[8 0 0 0 0 0 0 0]\n",
-      " [9 0 0 0 0 0 0 0]]\n",
-      "[[10  0  0  0  0  0  0  0]\n",
-      " [11  0  0  0  0  0  0  0]]\n",
-      "[[12  0  0  0  0  0  0  0]\n",
-      " [13  0  0  0  0  0  0  0]]\n",
-      "[[14  0  0  0  0  0  0  0]\n",
-      " [15  0  0  0  0  0  0  0]]\n",
-      "[[0 0 0 0 0 0 0 0]\n",
-      " [1 0 0 0 0 0 0 0]]\n",
-      "[[2 0 0 0 0 0 0 0]\n",
-      " [3 0 0 0 0 0 0 0]]\n",
-      "[[4 0 0 0 0 0 0 0]\n",
-      " [5 0 0 0 0 0 0 0]]\n",
-      "[[6 0 0 0 0 0 0 0]\n",
-      " [7 0 0 0 0 0 0 0]]\n",
-      "[[8 0 0 0 0 0 0 0]\n",
-      " [9 0 0 0 0 0 0 0]]\n",
-      "[[10  0  0  0  0  0  0  0]\n",
-      " [11  0  0  0  0  0  0  0]]\n",
-      "[[12  0  0  0  0  0  0  0]\n",
-      " [13  0  0  0  0  0  0  0]]\n",
-      "[[14  0  0  0  0  0  0  0]\n",
-      " [15  0  0  0  0  0  0  0]]\n",
-      "[[0 0 0 0 0 0 0 0]\n",
-      " [1 0 0 0 0 0 0 0]]\n",
-      "[[2 0 0 0 0 0 0 0]\n",
-      " [3 0 0 0 0 0 0 0]]\n",
-      "[[4 0 0 0 0 0 0 0]\n",
-      " [5 0 0 0 0 0 0 0]]\n",
-      "[[6 0 0 0 0 0 0 0]\n",
-      " [7 0 0 0 0 0 0 0]]\n",
-      "[[8 0 0 0 0 0 0 0]\n",
-      " [9 0 0 0 0 0 0 1]]\n",
-      "[[10  0  0  0  0  0  0  0]\n",
-      " [11  0  0  0  0  0  0  0]]\n",
-      "[[12  0  0  0  0  0  0  0]\n",
-      " [13  0  0  0  0  0  0  0]]\n",
-      "[[14  0  0  0  0  0  0  0]\n",
-      " [15  0  0  0  0  0  0  0]]\n",
-      "[[0 0 0 0 0 0 0 0]\n",
-      " [1 0 0 0 0 0 0 0]]\n",
-      "[[2 0 0 0 0 0 0 1]\n",
-      " [3 0 0 0 0 0 0 0]]\n",
-      "[[4 0 0 0 0 0 0 0]\n",
-      " [5 0 0 0 0 0 0 0]]\n",
-      "[[6 0 0 0 0 0 0 0]\n",
-      " [7 0 0 0 0 0 0 0]]\n",
-      "[[8 0 0 0 0 0 0 0]\n",
-      " [9 0 0 0 0 0 0 0]]\n",
-      "[[10  0  0  0  0  0  0  0]\n",
-      " [11  0  0  0  0  0  0  0]]\n",
-      "[[12  0  0  0  0  0  0  1]\n",
-      " [13  0  0  0  0  0  0  0]]\n",
-      "[[14  0  0  0  0  0  0  0]\n",
-      " [15  0  0  0  0  0  0  0]]\n",
-      "[[0 0 0 0 0 0 0 0]\n",
-      " [1 0 0 0 0 0 0 0]]\n",
-      "[[2 0 0 0 0 0 0 0]\n",
-      " [3 0 0 0 0 0 0 0]]\n",
-      "[[4 0 0 0 0 0 0 0]\n",
-      " [5 0 0 0 0 0 0 0]]\n",
-      "[[6 0 0 0 0 0 0 0]\n",
-      " [7 0 0 0 0 0 0 0]]\n",
-      "[[8 0 0 0 0 0 0 1]\n",
-      " [9 0 0 0 0 0 0 0]]\n",
-      "[[10  0  0  0  0  0  0  0]\n",
-      " [11  0  0  0  0  0  0  0]]\n",
-      "[[12  0  0  0  0  0  0  0]\n",
-      " [13  0  0  0  0  0  0  0]]\n",
-      "[[14  0  0  0  0  0  0  0]\n",
-      " [15  0  0  0  0  0  0  0]]\n",
-      "[[0 0 0 0 0 0 0 0]\n",
-      " [1 0 0 0 0 0 0 0]]\n",
-      "[[2 0 0 0 0 0 0 0]\n",
-      " [3 0 0 0 0 0 0 0]]\n",
-      "[[4 0 0 0 0 0 0 1]\n",
-      " [5 0 0 0 0 0 0 0]]\n",
-      "[[6 0 0 0 0 0 0 0]\n",
-      " [7 0 0 0 0 0 0 0]]\n",
-      "[[8 0 0 0 0 0 0 0]\n",
-      " [9 0 0 0 0 0 0 0]]\n",
-      "[[10  0  0  0  0  0  0  0]\n",
-      " [11  0  0  0  0  0  0  0]]\n",
-      "[[12  0  0  0  0  0  0  1]\n",
-      " [13  0  0  0  0  0  0  1]]\n",
-      "[[14  0  0  0  0  0  0  0]\n",
-      " [15  0  0  0  0  0  0  0]]\n",
-      "[[0 0 0 0 0 0 0 0]\n",
-      " [1 0 0 0 0 0 0 0]]\n",
-      "[[2 0 0 0 0 0 0 0]\n",
-      " [3 0 0 0 0 0 0 0]]\n",
-      "[[4 0 0 0 0 0 0 0]\n",
-      " [5 0 0 0 0 0 0 1]]\n",
-      "[[6 0 0 0 0 0 0 0]\n",
-      " [7 0 0 0 0 0 0 0]]\n",
-      "[[8 0 0 0 0 0 0 0]\n",
-      " [9 0 0 0 0 0 0 0]]\n",
-      "[[10  0  0  0  0  0  0  0]\n",
-      " [11  0  0  0  0  0  0  0]]\n",
-      "[[12  0  0  0  0  0  0  0]\n",
-      " [13  0  0  0  0  0  0  1]]\n",
-      "[[14  0  0  0  0  0  0  0]\n",
-      " [15  0  0  0  0  0  0  0]]\n",
-      "[[0 0 0 0 0 0 0 0]\n",
-      " [1 0 0 0 0 0 0 0]]\n",
-      "[[2 0 0 0 0 0 0 0]\n",
-      " [3 0 0 0 0 0 0 0]]\n",
-      "[[4 0 0 0 0 0 0 0]\n",
-      " [5 0 0 0 0 0 0 1]]\n",
-      "[[6 0 0 0 0 0 0 0]\n",
-      " [7 0 0 0 0 0 0 0]]\n",
-      "[[8 0 0 0 0 0 0 0]\n",
-      " [9 0 0 0 0 0 0 0]]\n",
-      "[[10  0  0  0  0  0  0  0]\n",
-      " [11  0  0  0  0  0  0  1]]\n",
-      "[[12  0  0  0  0  0  0  0]\n",
-      " [13  0  0  0  0  0  0  0]]\n",
-      "[[14  0  0  0  0  0  0  0]\n",
-      " [15  0  0  0  0  0  0  0]]\n",
-      "[[0 0 0 0 0 0 0 0]\n",
-      " [1 0 0 0 0 0 0 0]]\n",
-      "[[2 0 0 0 0 0 0 0]\n",
-      " [3 0 0 0 0 0 0 0]]\n",
-      "[[4 0 0 0 0 0 0 0]\n",
-      " [5 0 0 0 0 0 0 0]]\n",
-      "[[6 0 0 0 0 0 0 0]\n",
-      " [7 0 0 0 0 0 0 0]]\n",
+      "\n",
+      "data: [[   0 1778    0]\n",
+      " [   1 1778    0]]\n",
+      "\n",
+      "data: [[   2 1776    0]\n",
+      " [   3 1776    0]]\n",
+      "\n",
+      "data: [[   4 1779    0]\n",
+      " [   5 1779    0]]\n",
+      "\n",
+      "data: [[   6 1779    0]\n",
+      " [   7 1778    0]]\n",
+      "\n",
+      "data: [[   8 1780    0]\n",
+      " [   9 1779    0]]\n",
+      "\n",
+      "data: [[  10 1779    0]\n",
+      " [  11 1776    0]]\n",
+      "\n",
+      "data: [[  12 1777    0]\n",
+      " [  13 1777    0]]\n",
+      "\n",
+      "data: [[  14 1777    0]\n",
+      " [  15 1777    0]]\n",
+      "\n",
+      "data: [[   0 1776    0]\n",
+      " [   1 1776    0]]\n",
+      "\n",
+      "data: [[   2 1777    0]\n",
+      " [   3 1776    0]]\n",
+      "\n",
+      "data: [[   4 1777    0]\n",
+      " [   5 1777    0]]\n",
+      "\n",
+      "data: [[   6 1779    0]\n",
+      " [   7 1781    0]]\n",
+      "\n",
+      "data: [[   8 1776    0]\n",
+      " [   9 1776    0]]\n",
+      "\n",
+      "data: [[  10 1778    0]\n",
+      " [  11 1778    0]]\n",
+      "\n",
+      "data: [[  12 1782    0]\n",
+      " [  13 1777    0]]\n",
+      "\n",
+      "data: [[  14 1777    0]\n",
+      " [  15 1777    0]]\n",
+      "\n",
+      "data: [[   0 1776    0]\n",
+      " [   1 1776    0]]\n",
+      "\n",
+      "data: [[   2 1776    0]\n",
+      " [   3 1776    0]]\n",
+      "\n",
+      "data: [[   4 1777    0]\n",
+      " [   5 1777    0]]\n",
+      "\n",
+      "data: [[   6 1777    0]\n",
+      " [   7 1777    0]]\n",
       "\n",
       "\n",
       "Acquisition terminated\n"
@@ -467,6 +366,8 @@
     }
    ],
    "source": [
+    "## Initialization\n",
+    "\n",
     "try: \n",
     "    \n",
     "    now = datetime.now()\n",
@@ -476,22 +377,31 @@
     "    file.write(get_header(acquisition))\n",
     "\n",
     "    # Connect devices\n",
-    "\n",
-    "    scientisst_device = connect_scientisst(scientisst_args[\"mac_address\"])\n",
-    "    bitalino_device = None #bitalino_device = connect_bitalino(bitalino_args[\"mac_address\"])\n",
-    "    arduino_device = None # This device does not require connection prior to acquisition start\n",
+    "    scientisst_device = connect_device(scientisst_args[\"mac_address\"], \"ScientISST\")\n",
+    "    bitalino_device = None #bitalino_device = connect_device(bitalino_args[\"mac_address\"], \"BITalino\")\n",
+    "    arduino_device = None # Connection to this device happens at a later stage\n",
     "\n",
     "except KeyboardInterrupt:\n",
     "    print(f\"Script terminated before acquisition was started\")\n",
     "    acquisition.keep_alive = False\n",
+    "except ConnectionFailedException:\n",
+    "    acquisition.keep_alive = False\n",
+    "except UnknownDeviceException:\n",
+    "    acquisition.keep_alive = False\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "    acquisition.keep_alive = False\n",
+    "\n",
+    "\n",
+    "## Device streaming\n",
     "\n",
     "try: \n",
     "\n",
-    "    while acquisition.keep_alive == True:\n",
+    "    while acquisition.keep_alive:\n",
     "        \n",
     "        if not acquisition.devices_started: \n",
     "            # If the devices have not yet started acquiring or they are paused, start acquisition\n",
-    "            try:\n",
+    "            try: # TODO: timeout para isto\n",
     "                arduino_device = start_devices(bitalino_device, scientisst_device, acquisition)\n",
     "                acquisition.devices_started = True\n",
     "\n",
@@ -500,27 +410,45 @@
     "                pass\n",
     "        \n",
     "        else:\n",
-    "            read_batch(bitalino_device, scientisst_device, arduino_device, acquisition)\n",
+    "            try:\n",
+    "                read_batch(bitalino_device, scientisst_device, arduino_device, acquisition)\n",
+    "            except KeyboardInterrupt:\n",
+    "                acquisition.keep_alive = False\n",
+    "                print(f\"\\n\\nAcquisition terminated\")\n",
+    "\n",
+    "            except:\n",
+    "                #bitalino_device.stop()\n",
+    "                scientisst_device.stop()\n",
+    "                arduino_device.close()\n",
+    "                acquisition.devices_started = False\n",
+    "                pass\n",
+    "\n",
     "\n",
     "except KeyboardInterrupt:\n",
+    "    print(f\"\\n\\nAcquisition terminated\")\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(e)\n",
     "    #bitalino_device.stop()\n",
     "    scientisst_device.stop()\n",
     "    arduino_device.close()\n",
     "    file.close()\n",
-    "    print(f\"\\n\\nAcquisition terminated\")\n"
+    "\n",
+    "#bitalino_device.stop()\n",
+    "scientisst_device.stop()\n",
+    "arduino_device.close()\n",
+    "file.close()\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "envepibox",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -534,12 +462,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "79299d566563c8b9aab4e3d06af8504a8e5a1d4b54f56dd59d7e1cae69abea4c"
+    "hash": "c6e4e9f98eb68ad3b7c296f83d20e6de614cb42e90992a65aa266555a3137d0d"
    }
   }
  },
